# ComfyUI-ComfyLink

./: .gitignore  LICENSE  README.md  __init__.py  pyproject.toml  requirements.txt  ruff.toml
.github/workflows/: ci.yml
comfylink/: __init__.py  auth.py  comfy.py  config.py  jobs.py  log.py  relay.py  routes.py  status.py  version.py  worker.py
ops/: README.md  status.json  versions.json
tests/: test_abandon.py  test_heartbeat.py  test_object_info.py  test_pairings.py  test_relay_config.py  test_revoke_strikes.py  test_security.py  test_stall.py  test_subscriptions.py  test_sync_route.py  test_units.py  test_upload.py  test_version.py  test_version_report.py  test_workflow_sync.py
web/: comfylink.js  sync.js
